# pSCT-alignment

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  TemplateClientConfig.ini  TemplateClientConfig.xml  clienthelper.cpp  clienthelper.h  clienthelper.hpp  configuration.cpp  configuration.h  database.cpp  database.h  edgeobject.cpp  edgeobject.h  gasobject.cpp  gasobject.h  log.txt  mirrorobject.cpp  mirrorobject.h  panelobject.cpp  panelobject.h  pascommunicationinterface.cpp  pascommunicationinterface.hpp  pasnodemanager.cpp  pasnodemanager.h  pasnodemanager.hpp  pasobjectfactory.cpp  pasobjectfactory.h  pasobjectfactory.hpp  positioner.cpp  positioner.h  servermain.cpp  start_client.sh  start_client_custom.sh  start_sim_client.sh  subscription.cpp  subscription.h
client/controllers/: actcontroller.cpp  actcontroller.hpp  ccdcontroller.cpp  ccdcontroller.hpp  edgecontroller.cpp  edgecontroller.hpp  focalplanecontroller.cpp  focalplanecontroller.hpp  globalalignmentcontroller.cpp  globalalignmentcontroller.hpp  lasercontroller.cpp  lasercontroller.hpp  mirrorcontroller.cpp  mirrorcontroller.hpp  mpescontroller.cpp  mpescontroller.hpp  opticalalignmentcontroller.cpp  opticalalignmentcontroller.hpp  opttablecontroller.cpp  opttablecontroller.hpp  panelcontroller.cpp  panelcontroller.hpp  pascontroller.cpp  pascontroller.h  pascontroller.hpp  positionercontroller.cpp  positionercontroller.hpp  psdcontroller.cpp  psdcontroller.hpp  rangefindercontroller.cpp  rangefindercontroller.hpp
client/interface/: controlpositioner.cpp  controlpositioner.h  pascommunicationinterface.cpp  pascommunicationinterface.h  pascontroller.cpp  pascontroller.h  pasmirror.cpp  pasmirror.h
client/logic/: paslogic.cpp  paslogic.h
client/objects/: ccdobject.cpp  ccdobject.hpp  edgeobject.cpp  edgeobject.h  edgeobject.hpp  focalplaneobject.cpp  focalplaneobject.hpp  gasobject.cpp  gasobject.h  globalalignmentobject.cpp  globalalignmentobject.hpp  laserobject.cpp  laserobject.hpp  mirrorobject.cpp  mirrorobject.h  mirrorobject.hpp  opticalalignmentobject.cpp  opticalalignmentobject.hpp  opttableobject.cpp  opttableobject.hpp  panelobject.cpp  panelobject.h  panelobject.hpp  positionerobject.cpp  positionerobject.h  positionerobject.hpp  rangefinderobject.cpp  rangefinderobject.hpp
client/utilities/: callback.h  callback.hpp  configuration.cpp  configuration.h  configuration.hpp  database.cpp  database.hpp  paslogic.cpp  paslogic.h  paslogic.hpp  subscription.cpp  subscription.h  subscription.hpp
sdk/: CHANGELOG.txt  CMakeLists.txt  README.linux  buildClient.sh  buildExamples.sh  buildServer.sh  buildclient.sh
sdk/cmake/: ConfigureCompiler.cmake  ConfigureCppSdk.cmake  ConfigureUaStack.cmake  ConfigureWCELIBCEX.cmake  DisableOption.cmake  EnableOption.cmake  FindROOT.cmake  FindUASDK.cmake  FindUaLibXml2.cmake  FindUaOpenSSL.cmake  InstallIfNewer.cmake  InstallPDBFiles.cmake  MessageUtils.cmake  SetThirdPartyPaths.cmake  VSSetDebugConfig.cmake
sdk/cmake/VSSetDebugConfigTemplates/: vcproj_per_config.in  vcproj_user.in  vcxproj_per_config.in  vcxproj_user.in
sdk/examples/: CMakeLists.txt
sdk/examples/client_cpp_sdk/: CMakeLists.txt  callback.h  client_cpp_sdk.cpp  client_cpp_sdk.cpp.original  client_cpp_sdk.h  clientconfig.cpp  clientconfig.h  demo_datatypes.cpp  demo_datatypes.h  demo_identifiers.h  demo_uniontest.cpp  demo_uniontest.h  demo_vector.cpp
sdk/examples/client_gettingstarted/: CMakeLists.txt  sampleconfig.ini
sdk/examples/config/: ClientConfig.ini  ServerConfig.xml
sdk/examples/server_cpp_demo/: CMakeLists.txt  access_accesspermissionobjecttype.cpp  access_accesspermissionobjecttype.h  access_accesspermissionobjecttypebase.cpp  access_accesspermissionobjecttypebase.h  access_datatypes.h  access_identifiers.h  access_instancefactory_access.cpp  access_instancefactory_access.h  access_nodemanageraccess.cpp  access_nodemanageraccess.h  access_nodemanageraccessbase.cpp  access_nodemanageraccessbase.h  airconditionercontrollerobject.cpp  airconditionercontrollerobject.h  baeventdata.cpp  baeventdata.h  bauserdata.h  buildingautomationtypeids.h  controllerobject.cpp  controllerobject.h  demo_accessrights.cpp  demo_accessrights.h  demo_boilertype.cpp  demo_boilertype.h  demo_boilertypebase.cpp  demo_boilertypebase.h  demo_datatypes.cpp  demo_datatypes.h  demo_filllevelsensortype.cpp  demo_filllevelsensortype.h  demo_filllevelsensortypebase.cpp  demo_filllevelsensortypebase.h  demo_identifiers.h  demo_instancefactory_demo.cpp  demo_instancefactory_demo.h  demo_machinetype.cpp  demo_machinetype.h  demo_machinetypebase.cpp  demo_machinetypebase.h  (+34 more)
sdk/examples/server_gettingstarted/: CMakeLists.txt
sdk/examples/server_hello_world/: CMakeLists.txt  README.TXT  servermain.cpp
sdk/examples/server_plc_data/: CMakeLists.txt  nodemanagerboilerdemo.cpp  nodemanagerboilerdemo.h  servermain.cpp
sdk/examples/server_sdk_tutorial/: CMakeLists.txt  iomanagertree.cpp  iomanagertree.h  mydatavariable.cpp  mydatavariable.h  myfolder.cpp  myfolder.h  myiomanagervalues.cpp  myiomanagervalues.h  mytree.cpp  mytree.h  mytreenodebase.cpp  mytreenodebase.h  nodemanagertree.cpp  nodemanagertree.h  servermain.cpp  (+2 more)
sdk/lic/: Libxml2_license.txt  UnifiedAutomation_Software_License_Agreement.txt
server/: CMakeLists.txt  TemplateServerConfig.xml  panelobject.cpp  panelobject.h  pascommunicationinterface.cpp  pascommunicationinterface.hpp  pasnodemanager.cpp  pasnodemanager.h  pasnodemanager.hpp  servermain.cpp  start_server.sh  start_sim_servers.sh  start_sim_servers_interactive.sh  stop_sim_servers.sh
server/controllers/: actcontroller.cpp  actcontroller.hpp  lasercontroller.cpp  lasercontroller.hpp  mpescontroller.cpp  mpescontroller.hpp  panelcontroller.cpp  panelcontroller.hpp  pascontroller.cpp  pascontroller.hpp  psdcontroller.cpp  psdcontroller.hpp  rangefindercontroller.cpp  rangefindercontroller.hpp
server/interface/: pascommunicationinterface.cpp  pascommunicationinterface.h  pascontroller.cpp  pascontroller.h
server/objects/: panelobject.cpp  panelobject.hpp
(+806 files in other folders)
